[gd_scene load_steps=2 format=3 uid="uid://k1k2n4p7x0c6m"]

[ext_resource type="Script" path="res://scripts/ui/accounting_dialog.gd" id="1_script"]

[node name="AccountingDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -280.0
offset_right = 400.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Accounting"

[node name="Spacer" type="Control" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/VBox/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="FinancesSummary" type="GridContainer" parent="Panel/VBox"]
layout_mode = 2
columns = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="TransactionsList" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TransactionsContainer" type="VBoxContainer" parent="Panel/VBox/TransactionsList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Footer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/VBox/Footer"]
layout_mode = 2
text = "Track your company finances here"

[connection signal="pressed" from="Panel/VBox/Header/CloseButton" to="." method="_on_close_pressed"]
